--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.3.16"
+    "literallycanvas": "^0.4.14",
+    "mongoose": "^5.3.16",
+    "react-sketch": "^0.5.1",
+    "sketchpad": "^0.1.0"
   }
 }
