--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "literallycanvas": "^0.4.14",
     "mongoose": "^5.3.16",
     "react-sketch": "^0.5.1",
+    "reactjs-popup": "^1.4.1",
     "sketchpad": "^0.1.0"
   }
 }
